--- a/scripts/view/dashboard/tasks/task_info.html
+++ b/scripts/view/dashboard/tasks/task_info.html
@@ -123,6 +123,13 @@ var editor = null;
 $(document).ready(function() {
     $('#task-content-preview').empty();
     $('#task-content-preview').append('<div class="md-preview d-block mh-100">' + marked(content || '') + '</div>');
+    PR.prettyPrint();
+    $('.flowchart').each(function() {
+        var elem = $(this);
+        var diag = flowchart.parse(elem.text());
+        elem.empty();
+        diag.drawSVG(elem.get(0));
+    });
 });
 
 $('#form-mod-time .form-datetime').datetimepicker({
@@ -202,6 +209,13 @@ function end_edit(save) {
         } else {
             $('#task-content-preview').empty();
             $('#task-content-preview').append('<div class="md-preview d-block mh-100">' + marked(content || '') + '</div>');
+            PR.prettyPrint();
+            $('.flowchart').each(function() {
+                var elem = $(this);
+                var diag = flowchart.parse(elem.text());
+                elem.empty();
+                diag.drawSVG(elem.get(0));
+            });
         } 
     }
 }
