add comment for tasks

--- a/scripts/view/dashboard/projects/index.html
+++ b/scripts/view/dashboard/projects/index.html
@@ -175,6 +175,7 @@ function get_proj_info(btn, url, id, name) {
     last_pressed_button = btn;
     $(last_pressed_button).addClass('list-group-item-secondary');
     
+    $('.xdsoft_datetimepicker').remove();
     $('#project-detail').empty();
     $('#project-detail').get(0).innerHTML = '<div class="text-center text-muted" style="margin-top: 40%"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>';
 
