--- a/scripts/view/dashboard/tasks/task_info.html
+++ b/scripts/view/dashboard/tasks/task_info.html
@@ -1,5 +1,6 @@
 <button class="task-view-pane-close" onclick="return close_task();"><i class="fa fa-chevron-right"></i></button>
 
+<!-- 窗口标题及状态栏 -->
 <div class="px-2 my-2" style="margin-left: 24px;">
 
     <!-- 标题 -->
@@ -97,22 +98,73 @@
             <i class="fa fa-pencil-square-o mr-1"></i>编辑
         </div>
     </div>
-
     <hr class="mt-2">
+</div>
 
-    <div id="task-content-preview" class="mt-4 h-100" style="min-height: 300px;">{{task.info.content}}</div>
+<!-- 任务信息 -->
+<div class="task-detail-info-pane mt-4" editing-comment="false">
 
+    <!-- 任务描述 -->
+    <div id="task-content-preview" style="min-height: 250px;">{{task.info.content}}</div>
+
+    <!-- 任务评论及动态 -->
     <div class="mt-4">
-        <label class="text-muted">动态</label>
-        <hr class="mt-0 mb-2">
-
-        <ul class="px-0" style="list-style-type: none;font-size: .8em;">
-            {% for _, ev in ipairs(task.events) do %}
-            <li class="text-muted">
-                <i class="fa fa-calendar mr-1"></i><span class="mr-1">{{tostring(ev.timepoint)}}</span><b class="mr-1">{{ev.user}}</b>{{ev.event_desc}} 
+        <ul class="nav nav-tabs" id="task-addition-tab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="task-comment-tab" data-toggle="tab" href="#task-comment-pane" role="tab" aria-controls="task-comment-pane" aria-selected="true">评论</a>
             </li>
-            {% end %}
+            <li class="nav-item">
+                <a class="nav-link" id="task-event-tab" data-toggle="tab" href="#task-event-pane" role="tab" aria-controls="task-event-pane" aria-selected="false">动态</a>
+            </li>
         </ul>
+
+        <div class="tab-content h-100">
+            <!-- 评论分页 -->
+            <div class="tab-pane fade show active" id="task-comment-pane" role="tabpanel" aria-labelledby="task-comment-tab">
+                {% for _, info in ipairs(task.comments) do %}
+                <div class="mt-2 border-bottom">
+                    <div class="d-flex mb-2">
+                        <img class="mr-3" src="{{info.user_avatar or '/www/images/default_avatar.png'}}" width="48px" height="48px">
+                        <div class="">
+                            <b class="mt-0">{{info.user}}</b><br>
+                            <small class="text-muted">
+                                <i class="fa fa-clock-o mr-1"></i>{{tostring(info.timepoint)}}
+                                {% if info.uid == session.uid then %}
+                                <a href="#" class="btn-link ml-2" onclick="return del_comment('{{info.id}}');">撤回该评论</a>
+                                {% end %}
+                            </small>
+                        </div>
+                    </div>
+
+                    {*info.comment*}
+                </div>
+                {% end %}
+            </div>
+
+            <!-- 事件分页 -->
+            <div class="tab-pane fade pt-1" id="task-event-pane" role="tabpanel" aria-labelledby="task-event-tab">
+                <ul class="p-2" style="list-style-type: none;font-size: .8em;">
+                    {% for _, ev in ipairs(task.events) do %}
+                    <li class="text-muted">
+                        <i class="fa fa-calendar mr-1"></i><span class="mr-1">{{tostring(ev.timepoint)}}</span><b class="mr-1">{{ev.user}}</b>{{ev.event_desc}} 
+                    </li>
+                    {% end %}
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 底部评论工具 -->
+<div class="task-comment-pane px-2" editing-comment="false">
+    <input id="trigger-task-comment" type="text" class="form-control" placeholder="发表评论...">
+    <div class="editing-pane pt-2">
+        <textarea id="task-comment-input" data-provide="markdown" rows="10"
+            data-savable="false"
+            data-iconlibrary="fa"
+            data-upload="/dashboard/files/upload"
+            data-fullscreen = "{ enable: false }"
+            data-footer='<div class="text-right"><button id="btn-close-edit" type="button" class="btn btn-sm btn-secondary mr-2" onclick="return end_comment(false);"><i class="fa fa-ban"></i></button><button id="btn-save-content" type="button" class="btn btn-sm btn-primary" onclick="return end_comment(true);"><i class="fa fa-send-o"></i></button></div>'></textarea>
     </div>
 </div>
 
@@ -137,6 +189,14 @@ $('#form-mod-time .form-datetime').datetimepicker({
     timepicker: false,
     lang: 'zh'
 });
+
+$('#trigger-task-comment').focusin(function() {
+    $('.task-comment-pane').attr('editing-comment', true);
+    $('.task-detail-info-pane').attr('editing-comment', true);
+    $('#task-comment-input').focus();
+});
+
+$('#task-comment-input').markdown();
 
 function refresh_task_info() {
     open_task('{{task.info.id}}');
@@ -218,5 +278,24 @@ function end_edit(save) {
             });
         } 
     }
+}
+
+function end_comment(send) {
+    if (send) {
+        var comment = $('#task-comment-input').val();
+        $.post('/dashboard/tasks/add_comment', { id: '{{task.info.id}}', comment: marked(comment || '') }, function(ret) {
+            if (ret.ok) refresh_task_info();
+        });
+    }
+
+    $('#task-comment-input').val('');
+    $('.task-comment-pane').attr('editing-comment', false);
+    $('.task-detail-info-pane').attr('editing-comment', false);
+}
+
+function del_comment(id) {
+    $.post('/dashboard/tasks/del_comment', { id: id }, function(ret) {
+        if (ret.ok) refresh_task_info();
+    });
 }
 </script>
