show user's avatar in comment tab

--- a/scripts/view/dashboard/tasks/task_info.html
+++ b/scripts/view/dashboard/tasks/task_info.html
@@ -124,7 +124,7 @@
                 {% for _, info in ipairs(task.comments) do %}
                 <div class="mt-2 border-bottom">
                     <div class="d-flex mb-2">
-                        <img class="mr-3" src="{{info.user_avatar or '/www/images/default_avatar.png'}}" width="48px" height="48px">
+                        <img class="mt-1 mr-2 rounded-circle" src="{{info.user_avatar}}" width="40px" height="40px">
                         <div class="">
                             <b class="mt-0">{{info.user}}</b><br>
                             <small class="text-muted">
