--- a/scripts/view/dashboard/tasks/task_info_readonly.html
+++ b/scripts/view/dashboard/tasks/task_info_readonly.html
@@ -4,12 +4,16 @@
 
     <!-- 标题 -->
     <div class="d-table">
-        <h4>{{task.info.name}}</h4>
-        {% if #task.info.tags > 0 then %}
-        {% for _, tag in ipairs(task.info.tags) do %}
-        <span class="badge {{tags[tag].color}} mr-1 mb-1">{{tags[tag].title}}</span>
-        {% end %}
-        {% end %}
+        <h4>
+            {{task.info.name}}
+            {% if #task.info.tags > 0 then %}
+            <small class="ml-2 mt-1" style="font-size: 12px; vertical-align: middle;">
+                {% for _, tag in ipairs(task.info.tags) do %}
+                <span class="badge {{tags[tag].color}} mr-1">{{tags[tag].title}}</span>
+                {% end %}
+            </small>
+            {% end %}
+        </h4>
     </div>
     
     {% if enable_archive and task.info.status == 3 then %}
